--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           source: ./
           destination: ./_site
+          remote_theme: pages-themes/midnight@v0.2.0
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
 
