--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ description: Dig deeper into the avr world and discover every single bit in embe
 show_downloads: true
 google_analytics: true
 theme: jekyll-theme-slate
-icon: https://user-images.githubusercontent.com/60224159/178119492-91d3cc70-a88f-4b9a-94a0-ca7b68b1d861.png
+avatar: https://user-images.githubusercontent.com/60224159/178119492-91d3cc70-a88f-4b9a-94a0-ca7b68b1d861.png
